# brute_force_matcher

./: .gitignore  README.md  gitAdd.sh  gitMessage.txt  sim_compile.do
hardware/doc/: Drawing1.vsdx  SURF_Matching_accel_arch.vsdx  algorithm.rtf  arch.vsdx  module_hierachy.txt
hardware/doc/sort/: Descriptor Engine.vsdx  SURF_Matching_accel_arch.vsdx  dispatch.vsdx
hardware/ip/xcku115/2016.4/: vivado.jou
hardware/ip/xcku115/2016.4/brute_force_matcher_dispatch_unit_dwc_fifo/: brute_force_matcher_dispatch_unit_dwc_fifo.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_dispatch_unit_dwc_fifo_64dsp/: brute_force_matcher_dispatch_unit_dwc_fifo_64dsp.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_fixed_to_flt/: brute_force_matcher_fixed_to_flt.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_match_table_info_bram/: brute_force_matcher_match_table_info_bram.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_match_table_info_fifo/: brute_force_matcher_match_table_info_fifo.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_secondary_buffer_fifo/: brute_force_matcher_secondary_buffer_fifo.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_secondary_buffer_fifo_64dsp/: brute_force_matcher_secondary_buffer_fifo_64dsp.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_secondary_buffer_fifo_64dsp0/: brute_force_matcher_secondary_buffer_fifo_64dsp0.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_secondary_buffer_fifo_64dsp1/: brute_force_matcher_secondary_buffer_fifo_64dsp1.xci
hardware/ip/xcku115/2016.4/brute_force_matcher_squareRoot/: brute_force_matcher_squareRoot.xci
hardware/ip/xcku115/2016.4/fifo_74_74_1024_fwft/: fifo_74_74_1024_fwft.xci
hardware/ip/xcku115/2016.4/ila_1024_4096/: ila_1024_4096.xci
hardware/ip/xcku115/2016.4/ila_128_1024/: ila_128_1024.xci
hardware/ip/xcku115/2016.4/ila_128_4096/: ila_128_4096.xci
hardware/ip/xcku115/2016.4/ila_256_4096/: ila_256_4096.xci
hardware/ip/xcku115/2016.4/ila_448_4096/: ila_448_4096.xci
hardware/ip/xcku115/2016.4/ila_512_4096/: ila_512_4096.xci
hardware/ip/xcku115/2016.4/ila_768_4096/: ila_768_4096.xci
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_fixed_to_flt/: brute_force_matcher_fixed_to_flt.veo  brute_force_matcher_fixed_to_flt.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_match_table_info_bram/: brute_force_matcher_match_table_info_bram.veo  brute_force_matcher_match_table_info_bram.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_match_table_info_fifo/: brute_force_matcher_match_table_info_fifo.veo  brute_force_matcher_match_table_info_fifo.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_secondary_buffer_fifo/: brute_force_matcher_secondary_buffer_fifo.veo  brute_force_matcher_secondary_buffer_fifo.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_secondary_buffer_fifo_64dsp0/: brute_force_matcher_secondary_buffer_fifo_64dsp0.veo  brute_force_matcher_secondary_buffer_fifo_64dsp0.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_secondary_buffer_fifo_64dsp1/: brute_force_matcher_secondary_buffer_fifo_64dsp1.veo  brute_force_matcher_secondary_buffer_fifo_64dsp1.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/brute_force_matcher_squareRoot/: brute_force_matcher_squareRoot.veo  brute_force_matcher_squareRoot.vho
hardware/ip/xcku115/2016.4/ip_user_files/ip/ila_300_4096/: ila_300_4096.veo  ila_300_4096_stub.v  ila_300_4096_stub.vhdl
hardware/ip/xcku115/2016.4/ip_user_files/sim_scripts/ila_300_4096/activehdl/: compile.do  ila_300_4096.sh
hardware/ip/xcku115/2016.4/ip_user_files/sim_scripts/ila_300_4096/ies/: ila_300_4096.sh  run.f
hardware/ip/xcku115/2016.4/ip_user_files/sim_scripts/ila_300_4096/modelsim/: compile.do  ila_300_4096.sh  simulate.do
hardware/ip/xcku115/2016.4/ip_user_files/sim_scripts/ila_300_4096/questa/: compile.do  elaborate.do  (+2 more)
hardware/ip/xcku115/2016.4/managed_ip_project/: managed_ip_project.xpr
hardware/ip/xcku115/2016.4/managed_ip_project/managed_ip_project.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
hardware/ip/xcku115/2016.4/managed_ip_project/managed_ip_project.runs/.jobs/: vrs_config_10.xml  vrs_config_11.xml  vrs_config_12.xml  vrs_config_14.xml  vrs_config_16.xml  vrs_config_17.xml  vrs_config_20.xml  vrs_config_21.xml  vrs_config_22.xml  vrs_config_24.xml  vrs_config_3.xml  vrs_config_30.xml  vrs_config_36.xml  vrs_config_39.xml  vrs_config_47.xml  vrs_config_49.xml  vrs_config_57.xml  vrs_config_59.xml  vrs_config_60.xml  vrs_config_63.xml  vrs_config_7.xml  vrs_config_9.xml
hardware/ip/xcku115/2016.4/managed_ip_project/managed_ip_project.runs/ila_300_4096_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  htr.txt  ila_300_4096.dcp  ila_300_4096.tcl  ila_300_4096.vds  ila_300_4096_utilization_synth.pb  ila_300_4096_utilization_synth.rpt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
hardware/verilog/: SRL_bit.v  SRL_bus.v  address_incrementer.v  brute_force_matcher.v  brute_force_matcher_circular_descriptor_buffer.v  brute_force_matcher_controller.v  brute_force_matcher_datapath.v  brute_force_matcher_defines.vh  brute_force_matcher_descriptor_compute_pipeline.v  brute_force_matcher_dispatch_unit.v  brute_force_matcher_engine.v  brute_force_matcher_format_conv.v  brute_force_matcher_keyPointEngine.v  brute_force_matcher_match_table.v  brute_force_matcher_perf_counter.v  brute_force_matcher_preSubSquareAccum_DSP.v  brute_force_matcher_secondary_buffer_control.v  brute_force_matcher_secondary_descriptor_buffer.v  master_transactor.v  xilinx_simple_dual_port_1_clock_ram.v
software/: CMakeLists.txt
software/include/: brute_force_matcher_v1_00_a.h
software/src/: brute_force_matcher_v1_00_a.cpp
verification/scenario0/: Keypoint.sv  MatcherAccelMSG.sv  TODO.txt  brute_force_matcher_verf_defs.vh  hw_dsp_out_sqrt_in.txt  hw_sqrt_out.txt  main.sv  matchOut.txt  matchSol.txt  results.txt  startsim.do  testbench.sv  transcript  vsim.wlf  vsim_stacktrace.vstf  wave.do
(+8 files in other folders)
